--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -1,4 +1,3 @@
-@import '~antd/dist/antd.css';
 
 .App {
   text-align: center;
@@ -10,6 +9,14 @@
   padding: 0 24px;
   cursor: pointer;
   transition: color .3s;
+}
+
+.App-logout{
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  float: right;
 }
 
 .App-trigger:hover{
