--- a/react_frontend/src/LoginModule/LoginForm.css
+++ b/react_frontend/src/LoginModule/LoginForm.css
@@ -1,15 +1,13 @@
-@import '~antd/dist/antd.css';
-
 .login-form {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto !important; /* 覆盖antd的表单样式，用于登录窗体居中显示 */
+    margin-right: auto !important;
     position: relative;
     width: calc(100% - 40px);
     max-width: 440px;
     min-width: 320px;
     min-height: 350px;
     background-color: white;
-    padding: 44px;
+    padding: 44px !important;
     border-radius: 10px;
     border-color: rgb(84, 190, 102);
 }
